--- a/src/DIYManagementAPI/prometheus.yml
+++ b/src/DIYManagementAPI/prometheus.yml
@@ -1,8 +1,17 @@
 global:
   scrape_interval: 10s
   evaluation_interval: 10s
+
+  external_labels:
+    monitor: 'test-monitor'
+    cluster: 'test-cluster'
+
 scrape_configs:
- - job_name: diymanagementapi
-   static_configs:
-    - targets:
-       - diymanagementapi:5300
+  - job_name: 'prometheus'
+    static_configs:
+      - targets: ['localhost:9090']
+
+  - job_name: 'diymanagementapi'
+    static_configs:
+      - targets: ['diymanagementapi:5300']
+    metrics_path: /metrics
