--- a/src/k8s/monitoring/prometheus-deployment.yaml
+++ b/src/k8s/monitoring/prometheus-deployment.yaml
@@ -29,9 +29,39 @@ spec:
           ports:
             - containerPort: 9090
           volumeMounts:
-            - name: config-volume
-              mountPath: /etc/prometheus
+            - name: prometheus-config-volume
+              mountPath: /etc/prometheus/
+            - name: prometheus-data-volume
+              mountPath: /prometheus
+        - name: thanos-sidecar
+          image: quay.io/thanos/thanos:v0.34.0
+          args:
+            - sidecar
+            - "--prometheus.url=http://localhost:9090"
+            - "--grpc-address=0.0.0.0:10901"
+            - "--http-address=0.0.0.0:10902"
+            - "--tsdb.path=/prometheus"
+            - "--objstore.config-file=/etc/thanos/objstore.yml"
+          ports:
+            - containerPort: 10901
+              name: grpc
+            - containerPort: 10902
+              name: http
+          volumeMounts:
+            - name: prometheus-data-volume
+              mountPath: /prometheus
+            - name: thanos-objstore-config
+              mountPath: /etc/thanos
+          securityContext:
+            runAsUser: 0
+            runAsGroup: 0
+            runAsNonRoot: false
       volumes:
-        - name: config-volume
+        - name: prometheus-config-volume
           configMap:
             name: prometheus-config
+        - name: prometheus-data-volume
+          emptyDir: {}
+        - name: thanos-objstore-config
+          configMap:
+            name: thanos-objstore-config
